build/log/idf_py_stderr_output_587456
/home/pi/httptc/main/web_server.c: In function 'temp_post':
/home/pi/httptc/main/web_server.c:92:9: error: 'output_delay' undeclared (first use in this function); did you mean 'output_delay_ms'?
   92 |         output_delay = atoi(delay_str + 6);
      |         ^~~~~~~~~~~~
      |         output_delay_ms
/home/pi/httptc/main/web_server.c:92:9: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:134: esp-idf/main/CMakeFiles/__idf_main.dir/web_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
